--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 <!-- body -->
     <body>
         <div class="container">
-            <div class="header">
-                <header>
-                    <h1 class="page-title">BAR MENU</h1>
-                </header>
-            </div>
+            <header>
+                <div class="header">
+                    <h1>BAR MENU</h1>
+                </div>
+            </header>
 
-            <div class="main">
-                <main>
+            <main>
+                <div class="main">
                     <section>
                         <h2 class="drink-type">COCKTAIL</h2>
                         <ul>
                             <li>
-                                <p class="menu">Highball [ハイボール]</p>
+                                <p class="menu">Highball <br>[ハイボール]</p>
                                 <p class="price">￥600〜</p>
                             </li>
                             <li>
-                                <p class="menu">Gin and Tonic [ジントニック]</p>
+                                <p class="menu">Gin and Tonic <br>[ジントニック]</p>
                                 <p class="price">￥700〜</p>
                             </li>
                             <li>
-                                <p class="menu">Original Coffee Cocktail [オリジナルコーヒーカクテル]</p>
+                                <p class="menu">Original Coffee Cocktail <br>[オリジナルコーヒーカクテル]</p>
                                 <p class="price">￥900</p>
                             </li>
                             <li>
@@ -39,31 +39,31 @@
                                 <p class="price"></p>
                             </li>
                             <li>
-                                <p class="menu">Espresso Cocktail [エスプレッソカクテル]</p>
+                                <p class="menu">Espresso Cocktail <br>[エスプレッソカクテル]</p>
                                 <p class="price">￥900</p>
                             </li>
                             <li>
-                                <p class="menu">Cascara Orange [カスカラオレンジ]</p>
+                                <p class="menu">Cascara Orange <br>[カスカラオレンジ]</p>
                                 <p class="price">￥900</p>
                             </li>
                             <li>
-                                <p class="menu">Cafe Chocolate [カフェショコラ]</p>
+                                <p class="menu">Cafe Chocolate <br>[カフェショコラ]</p>
                                 <p class="price">￥900</p>
                             </li>
                             <li>
-                                <p class="menu">Amaretto Orange/Ginger [アマレットオレンジ／ジンジャー]</p>
+                                <p class="menu">Amaretto Orange/Ginger <br>[アマレットオレンジ／ジンジャー]</p>
                                 <p class="price">￥800</p>
                             </li>
                             <li>
-                                <p class="menu">Plum Wine [梅酒]</p>
+                                <p class="menu">Plum Wine <br>[梅酒]</p>
                                 <p class="price">￥700</p>
                             </li>
                             <li>
-                                <p class="menu">Kahlua and Milk [カルーアミルク]</p>
+                                <p class="menu">Kahlua and Milk <br>[カルーアミルク]</p>
                                 <p class="price">￥700</p>
                             </li>
                             <li>
-                                <p class="menu">Lemon Sour [レモンサワー]</p>
+                                <p class="menu">Lemon Sour <br>[レモンサワー]</p>
                                 <p class="price">￥600</p>
                             </li>
                         </ul>
@@ -95,27 +95,27 @@
                         <h2 class="drink-type">WHISKY</h2>
                         <ul>
                             <li>
-                                <p class="manu">山崎 ALC 43%</p>
+                                <p class="manu">山崎 <br>ALC 43%</p>
                                 <p class="price">R/H  ￥1,400/￥1,000</p>
                             </li>
                             <li>
-                                <p class="manu">白州 ALC 43%</p>
+                                <p class="manu">白州 <br>ALC 43%</p>
                                 <p class="price">R/H  ￥1,200/￥980</p>
                             </li>
                             <li>
-                                <p class="manu">Glenfiddich [グレンフィディック] ALC 40%</p>
+                                <p class="manu">Glenfiddich <br>[グレンフィディック]<br>ALC 40%</p>
                                 <p class="price">R/H  ￥1,000/￥950</p>
                             </li>
                             <li>
-                                <p class="manu">NIKKA SESSION [ニッカセッション] ALC 43%</p>
+                                <p class="manu">NIKKA SESSION <br>[ニッカセッション] <br>ALC 43%</p>
                                 <p class="price">R/H  ￥980/￥900</p>
                             </li>
                             <li>
-                                <p class="manu">FourRoses [フォアローゼズ] ALC 40%</p>
+                                <p class="manu">FourRoses <br>[フォアローゼズ] <br>ALC 40%</p>
                                 <p class="price">￥650</p>
                             </li>
                             <li>
-                                <p class="manu">BLACK NIKKA [ブラックニッカ] ALC 37%</p>
+                                <p class="manu">BLACK NIKKA <br>[ブラックニッカ] <br>ALC 37%</p>
                                 <p class="price">￥600</p>
                             </li>
                         </ul>
@@ -125,7 +125,7 @@
                         <h2 class="drink-type">GIN</h2>
                         <ul>
                             <li>
-                                <p class="menu">SIX DOG [シックスドッグ]</p>
+                                <p class="menu">SIX DOG <br>[シックスドッグ]</p>
                                 <p class="price">￥950</p>
                             </li>
                             <li>
@@ -147,17 +147,17 @@
                                 <p class="price">￥500</p>
                             </li>
                             <li>
-                                <p class="menu">Affogato [アフォガート]</p>
+                                <p class="menu">Affogato <br>[アフォガート]</p>
                                 <p class="price">￥900</p>
                             </li>
                         </ul>
                     </section>
-                </main>
-            </div>
+                </div>
+            </main>
 
             <div class="footer">
                 <footer>
-                    <p>&copy; Plus1coffeeCafeBar</p>
+                    <p>Plus1coffeeCafeBar</p>
                 </footer>
             </div>
         </div>
